taskboarding-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskboarding-frontend-service
spec:
  selector:
    app: taskboarding-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
