ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskboarding-frontend-ingress
spec:
  rules:
    - host: taskboarding-frontend.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taskboarding-frontend-service
                port:
                  number: 80
